Add update function [#184401350]
