# controllers/FilmsController.js
@@ -37,7 +37,29 @@ exports.getById = async (req,res)=>{
     }
 }
 exports.updateById = async (req,res)=>{
-    res.send({"message":"Not ipmlemented yet"})
+    let film = await Films.findByPk(req.params.id, {logging: console.log})
+    if (film === null) {
+        res.status(404).send({"error":"Film not found"})
+        return
+    }  
+    try {
+        film = await film.update(req.body,
+        {
+            where: { id: req.params.id},
+            logging:console.log
+        })
+    } catch (error) {
+        if (error instanceof db.Sequilize.ValidationError) {
+            res.status(400).send({"error":error.errors.map((item)=> item.message)})
+        } else {
+            console.log("FilmsUpdate:",error)
+            res.status(500).send({"error":"Something went wrong on our side. Sorry :("})
+        }
+        return 
+    }
+    res.status(200)
+        .location(`${getBaseUrl(req)}/films/${film.id}`)
+        .json(film)
 }
 exports.deleteById = async (req,res)=>{
     res.send({"message":"Not ipmlemented yet"})
